--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "writeprocessmemory",
     "openprocess"
   ],
+  "os": [
+    "win32"
+  ],
   "author": "Philipp Tusch <zokker13@posteo.de>",
   "license": "MIT",
   "bugs": {
