--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-manipulate_my_memory",
   "version": "0.1.0",
   "description": "Manipulate your memory in your OS",
-  "main": "index.js",
+  "main": "dist/commonjs/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,9 +29,10 @@
   },
   "homepage": "https://github.com/zokker13/node-manipulate_my_memory#readme",
   "dependencies": {
-    "async": "^2.1.5",
-    "bindings": "^1.2.1",
-    "nan": "^2.5.1"
+    "async": "^2.5.0",
+    "bindings": "^1.3.0",
+    "nan": "^2.7.0"
   },
-  "gypfile": true
+  "gypfile": true,
+  "typings": "dist/types"
 }
