--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "dependencies": {
     "async": "^2.5.0",
     "bindings": "^1.3.0",
-    "nan": "^2.7.0"
+    "bluebird": "^3.5.1",
+    "nan": "^2.7.0",
+    "underscore": "^1.8.3"
   },
   "gypfile": true
 }
