--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "async": "^2.5.0",
     "bindings": "^1.3.0",
     "bluebird": "^3.5.1",
+    "debug": "^3.1.0",
     "nan": "^2.7.0",
+    "process-list": "^1.2.1",
     "underscore": "^1.8.3"
   },
   "gypfile": true
