--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "gypfile": true,
   "devDependencies": {
     "@types/bluebird": "^3.5.17",
+    "@types/debug": "0.0.30",
     "@types/node": "^8.0.47",
     "@types/underscore": "^1.8.3"
   }
